homelab/templates/ghost-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost-ingress
spec:
  tls:
    - secretName: "le-cert"
    - hosts:
        - blog.sethpyle.com
  rules:
    - host: blog.sethpyle.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: ghost
                port:
                  number: 2368
